--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ng-solcre-framework",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^8.0.3",
-    "@angular/core": "^8.0.3",
-    "solcre-auth-library": "^0.1.4"
+    "@angular/core": "^8.0.3"
+  },
+  "dependencies": {
+    "ng-solcre-auth": "0.0.1"
   }
 }
