--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-solcre-framework",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,6 +15,6 @@
     "@angular/core": "^8.0.3"
   },
   "dependencies": {
-    "ng-solcre-auth": "^0.0.3"
+    "ng-solcre-auth": "~0.0.3"
   }
 }
